--- a/app/views/guidances/index.html.erb
+++ b/app/views/guidances/index.html.erb
@@ -5,7 +5,14 @@
         <%= link_to "ユーザー名さん", new_user_registration_path, class: :greeting__link%>
       </div>
     <div class="card__wrapper">
-      <%# 投稿機能実装後、部分テンプレートでプロトタイプ投稿一覧を表示する %>
+      <% @guidances.each do |guidance|%>
+      <div class="prototype__image" style="background-image: url(<%= guidance.image %>);">
+        <p><%= guidance.text %></p>
+        <span class="name">
+          <%= guidance.name%>
+        </span>
+      </div>
+      <% end %>
     </div>
   </div>
 </main>
